--- a/FXExperienceTools/src/main/resources/fxml/FXMLStatusDialog.fxml
+++ b/FXExperienceTools/src/main/resources/fxml/FXMLStatusDialog.fxml
@@ -1,18 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.TextArea?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
 <fx:root fx:id="statusDialog" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="618" styleClass="status-dialog" stylesheets="@../styles/status_dialog.css" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox maxWidth="-Infinity" minWidth="-Infinity" prefWidth="618.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox maxWidth="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="618.0" styleClass="alert-vbox" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+            <HBox alignment="CENTER_LEFT" VBox.vgrow="ALWAYS">
                <children>
-                  <TextArea fx:id="statusTextArea" maxWidth="1.7976931348623157E308" prefHeight="35.0" prefWidth="1000.0" styleClass="alert-text-area" text="Message" wrapText="true" />
+                  <Label fx:id="notification_label" alignment="CENTER" text="Label" />
                </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+               <padding>
+                  <Insets left="5.0" />
+               </padding>
             </HBox>
          </children>
       </VBox>
