--- a/FXExperienceTools/src/main/resources/styles/main_light.css
+++ b/FXExperienceTools/src/main/resources/styles/main_light.css
@@ -90,7 +90,7 @@ different terms and without source code for the larger work.
 }
 
 .context-menu {
-    -fx-skin: "com.sun.javafx.scene.control.skin.ContextMenuSkin";
+    /*-fx-skin: "com.sun.javafx.scene.control.skin.ContextMenuSkin";*/
     -fx-background-color: derive(rgb(147, 147, 147), -60%),
                           derive(rgb(147, 147, 147), -60%),
                           derive(rgb(147, 147, 147), 40%),
