--- a/FXExperienceTools/src/main/resources/styles/main_dark.css
+++ b/FXExperienceTools/src/main/resources/styles/main_dark.css
@@ -7,7 +7,8 @@ through interfaces provided by the licensed work may be distributed under
 different terms and without source code for the larger work.
 */
 .root {
-    -fe-body-background: #31363B;
+
+    -fe-body-background: #232629;
     -fe-inner-background: #2E3134;
     -fe-border: #616569;
     -fe-body-text:  #CDEFF1;
