--- a/FXExperienceTools/src/main/resources/styles/preview.css
+++ b/FXExperienceTools/src/main/resources/styles/preview.css
@@ -13,5 +13,5 @@ different terms and without source code for the larger work.
 }
 
 #RECT {
-    -fx-fill: linear-gradient(from 0.0% 0.0% to 1.0% 1.0% , #cf3737c4 0.0% , #9c2a2a 0.6433566433566433% , #9c2a2a 1.0% );
+    -fx-fill: linear-gradient(from 0.0% 0.0% to 1.0% 1.0% , #cf3737c4 0.0% , #9c2a2a 0.6% , #9c2a2a 1.0% );
 }
