--- a/FXExperienceControls/src/main/resources/fxml/FXMLColorPicker.fxml
+++ b/FXExperienceControls/src/main/resources/fxml/FXMLColorPicker.fxml
@@ -46,23 +46,22 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
-<?import javafx.scene.shape.Rectangle?>
 
-<fx:root id="CONTENT" maxHeight="-1.0" maxWidth="-Infinity" prefHeight="-1.0" prefWidth="304.0" style="" stylesheets="@../styles/ColorPicker.css" type="javafx.scene.layout.VBox" visible="true" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root id="CONTENT" maxHeight="-1.0" prefHeight="-1.0" style="" stylesheets="@../styles/ColorPicker.css" type="javafx.scene.layout.VBox" visible="true" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
   <children>
-    <GridPane gridLinesVisible="false" hgap="1.0" vgap="2.0" VBox.vgrow="NEVER">
+    <GridPane fx:id="grid_pane" gridLinesVisible="false" hgap="2.0" vgap="2.0" VBox.vgrow="NEVER">
       <children>
-        <DoubleTextField fx:id="alpha_textfield" onAction="#onActionAlpha" prefColumnCount="3" prefWidth="-1.0" styleClass="color-field" GridPane.columnIndex="6" GridPane.hgrow="NEVER" GridPane.rowIndex="2">
+        <DoubleTextField fx:id="alpha_textfield" prefColumnCount="3" prefWidth="-1.0" styleClass="color-field" GridPane.columnIndex="6" GridPane.rowIndex="2">
                <GridPane.margin>
             <Insets fx:id="x2" />
                </GridPane.margin>
             </DoubleTextField>
-        <DoubleTextField fx:id="hue_textfield" onAction="#onActionHue" prefColumnCount="3" prefWidth="-1.0" styleClass="color-field" GridPane.rowIndex="3" />
-        <DoubleTextField fx:id="saturation_textfield" onAction="#onActionSaturation" prefColumnCount="3" prefWidth="-1.0" styleClass="color-field" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-        <DoubleTextField fx:id="brightness_textfield" onAction="#onActionBrightness" prefColumnCount="3" prefWidth="-1.0" styleClass="color-field" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-        <DoubleTextField fx:id="red_textfield" onAction="#onActionRed" prefColumnCount="3" prefWidth="-1.0" styleClass="color-field" GridPane.columnIndex="4" GridPane.rowIndex="3" />
-        <DoubleTextField fx:id="green_textfield" onAction="#onActionGreen" prefColumnCount="3" prefWidth="-1.0" styleClass="color-field" GridPane.columnIndex="5" GridPane.rowIndex="3" />
-        <DoubleTextField fx:id="blue_textfield" onAction="#onActionBlue" prefColumnCount="3" prefWidth="-1.0" styleClass="color-field" GridPane.columnIndex="6" GridPane.rowIndex="3" />
+        <DoubleTextField fx:id="hue_textfield" prefColumnCount="3" prefWidth="-1.0" styleClass="color-field" GridPane.rowIndex="3" />
+        <DoubleTextField fx:id="saturation_textfield" prefColumnCount="3" prefWidth="-1.0" styleClass="color-field" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        <DoubleTextField fx:id="brightness_textfield" prefColumnCount="3" prefWidth="-1.0" styleClass="color-field" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+        <DoubleTextField fx:id="red_textfield" prefColumnCount="3" prefWidth="-1.0" styleClass="color-field" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+        <DoubleTextField fx:id="green_textfield" prefColumnCount="3" prefWidth="-1.0" styleClass="color-field" GridPane.columnIndex="5" GridPane.rowIndex="3" />
+        <DoubleTextField fx:id="blue_textfield" prefColumnCount="3" prefWidth="-1.0" styleClass="color-field" GridPane.columnIndex="6" GridPane.rowIndex="3" />
         <Label styleClass="small-label" text="H°" GridPane.rowIndex="4" />
         <Label styleClass="small-label" text="S %" GridPane.columnIndex="1" GridPane.rowIndex="4" />
         <Label styleClass="small-label" text="B %" GridPane.columnIndex="2" GridPane.rowIndex="4" />
@@ -92,8 +91,8 @@
                 <children>
                   <StackPane VBox.vgrow="ALWAYS">
                     <children>
-                      <Region maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="57.0" prefWidth="102.0" style="" styleClass="chip-background" />
-                      <Region fx:id="chip_region" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="57.0" prefWidth="102.0" style="">
+                      <Region style="" styleClass="chip-background" />
+                      <Region fx:id="chip_region" style="">
                         <padding>
                           <Insets fx:id="x6" />
                         </padding>
@@ -103,46 +102,11 @@
                       </Region>
                     </children>
                   </StackPane>
-                  <TextField fx:id="hexa_textfield" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#onActionHexa" prefColumnCount="6" prefHeight="22.0" prefWidth="102.0" styleClass="color-field" text="#123456" />
+                  <TextField fx:id="hexa_textfield" prefColumnCount="6" styleClass="color-field" text="#123456" />
                 </children>
               </VBox>
             </children>
           </HBox>
-            <HBox maxWidth="-Infinity" prefWidth="258.0" GridPane.columnSpan="6" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="2" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
-               <children>
-                  <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="20.0" prefWidth="260.0" style="-fx-background-color: white;" HBox.hgrow="NEVER">
-                     <children>
-                  <Region fx:id="alpha_region" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="20.0" prefWidth="260.0" style="" styleClass="alpha-background" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                  <Region fx:id="alpha_bar" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragged="#onAlphaPickerDragged" onMouseReleased="#onAlphaPickerClicked" prefHeight="20.0" prefWidth="260.0" style="-fx-border-color: #606060;;" styleClass="opacity-slider-background" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                        <StackPane fx:id="alpha_handle_stackpane" layoutX="232.0" prefHeight="20.0">
-                           <children>
-                              <Circle fill="TRANSPARENT" radius="8.0" stroke="BLACK" strokeType="INSIDE" />
-                              <Circle fill="TRANSPARENT" radius="7.0" stroke="WHITE" strokeType="INSIDE" />
-                           </children>
-                        </StackPane>
-                     </children>
-                  </AnchorPane>
-               </children>
-            </HBox>
-            <HBox maxWidth="-Infinity" prefHeight="30.0" prefWidth="304.0" GridPane.columnSpan="7" GridPane.rowIndex="1">
-               <children>
-                  <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="28.0" prefWidth="304.0" HBox.hgrow="NEVER">
-                     <children>
-                        <Region fx:id="alpha_region1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="28.0" prefWidth="304.0" style="" styleClass="alpha-background" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                        <Region fx:id="hue_bar" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragged="#onHuePickerDragged" onMousePressed="#onHuePickerClicked" prefHeight="28.0" prefWidth="304.0" style="-fx-border-color: #606060;;" styleClass="hue-container" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="4.0" />
-                        <StackPane fx:id="hue_handle_stackpane" AnchorPane.topAnchor="0.0">
-                           <children>
-                              <Rectangle arcHeight="10.0" arcWidth="10.0" fill="#61616100" height="31.0" stroke="#b8b8b88b" strokeType="INSIDE" width="8.0" StackPane.alignment="CENTER" />
-                              <Rectangle arcHeight="10.0" arcWidth="10.0" fill="#f8f8f800" height="29.0" layoutX="10.0" layoutY="10.0" stroke="#b2b2b2" strokeType="INSIDE" width="10.0" />
-                           </children>
-                        </StackPane>
-                     </children>
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                  </AnchorPane>
-               </children>
-            </HBox>
       </children>
       <columnConstraints>
         <ColumnConstraints halignment="CENTER" hgrow="NEVER" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="50.0" />
@@ -155,9 +119,9 @@
       </columnConstraints>
       <rowConstraints>
             <RowConstraints maxHeight="-Infinity" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="34.0" vgrow="NEVER" />
-        <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="20.0" valignment="CENTER" vgrow="NEVER" />
-        <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="22.0" vgrow="NEVER" />
+            <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
+        <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
+        <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0" vgrow="NEVER" />
         <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="15.0" vgrow="ALWAYS" />
       </rowConstraints>
     </GridPane>
