--- a/FXExperienceControls/src/main/resources/fxml/FXMLGradientPickerStop.fxml
+++ b/FXExperienceControls/src/main/resources/fxml/FXMLGradientPickerStop.fxml
@@ -31,7 +31,7 @@
   (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
-
+<?import com.fxexperience.javafx.scene.control.paintpicker.DoubleTextField?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ContextMenu?>
@@ -41,9 +41,8 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
-<?import com.fxexperience.javafx.scene.control.paintpicker.*?>
 
-<fx:root alignment="TOP_CENTER" prefHeight="-1.0" prefWidth="-1.0" stylesheets="@../styles/GradientPickerStop.css" type="javafx.scene.layout.VBox" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root alignment="TOP_CENTER" prefHeight="-1.0" prefWidth="-1.0" stylesheets="@../styles/GradientPickerStop.css" type="javafx.scene.layout.VBox" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
   <children>
     <Button fx:id="stop_button" mnemonicParsing="false" onKeyPressed="#thumbKeyPressed" onMouseDragged="#thumbMouseDragged" onMousePressed="#thumbMousePressed" onMouseReleased="#thumbMouseReleased" styleClass="gradient-stop-thumb" text="">
       <contextMenu>
