--- a/FXExperienceControls/src/main/resources/fxml/FXMLGradientSlider.fxml
+++ b/FXExperienceControls/src/main/resources/fxml/FXMLGradientSlider.fxml
@@ -31,34 +31,23 @@
   (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
-
 <?import com.fxexperience.javafx.scene.control.paintpicker.DoubleTextField?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.StackPane?>
 
-<fx:root id="GridPane" hgap="4.0" stylesheets="@../styles/RotatorControl.css" type="javafx.scene.layout.GridPane" vgap="0.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root id="GridPane" hgap="4.0" type="javafx.scene.layout.GridPane" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
   <children>
-    <Label fx:id="rotator_label" styleClass="rotation-label" text="Label" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-    <DoubleTextField fx:id="rotator_textfield" onAction="#rotatorAction" prefColumnCount="4" prefWidth="-1.0" styleClass="LF3-textfield1" text="0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-    <StackPane id="StackPane" GridPane.columnIndex="2" GridPane.rowIndex="0">
-      <children>
-        <Button fx:id="rotator_dial" mnemonicParsing="false" onMouseDragged="#rotatorMouseDragged" onMousePressed="#rotatorMousePressed" styleClass="rotation-dial" text="" />
-        <Button fx:id="rotator_handle" disable="true" mnemonicParsing="false" opacity="1.0" rotate="0.0" styleClass="rotation-handle" text="" />
-      </children>
-      <GridPane.margin>
-        <Insets left="4.0" />
-      </GridPane.margin>
-    </StackPane>
+    <Label fx:id="slider_label" styleClass="label-paint" text="Label" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+    <DoubleTextField fx:id="slider_textfield" onAction="#sliderAction" onKeyPressed="#sliderKeyPressed" prefColumnCount="4" prefWidth="-1.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+    <Slider fx:id="slider_slider" max="1.0" prefWidth="100.0" styleClass="slider-paint" value="0.5" GridPane.columnIndex="2" GridPane.rowIndex="0" />
   </children>
   <columnConstraints>
     <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" minWidth="10.0" percentWidth="40.0" />
-    <ColumnConstraints hgrow="NEVER" minWidth="10.0" />
-    <ColumnConstraints hgrow="NEVER" minWidth="10.0" />
+    <ColumnConstraints hgrow="NEVER" minWidth="-1.0" />
+    <ColumnConstraints hgrow="NEVER" minWidth="-1.0" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
