--- a/FXExperienceControls/src/main/resources/fxml/FXMLPaintPicker.fxml
+++ b/FXExperienceControls/src/main/resources/fxml/FXMLPaintPicker.fxml
@@ -32,12 +32,13 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="root_vbox" focusTraversable="true" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" prefWidth="304.0" spacing="1.0" styleClass="paint-picker-container" stylesheets="@../styles/paintpicker.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fxexperience.javafx.scene.control.paintpicker.PaintPickerController">
+<VBox fx:id="root_vbox" focusTraversable="true" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" prefWidth="316.0" spacing="2.0" styleClass="paint-picker-container" stylesheets="@../styles/paintpicker.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fxexperience.javafx.scene.control.paintpicker.PaintPickerController">
   <children>
     <HBox alignment="TOP_CENTER" focusTraversable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
       <children>
@@ -49,6 +50,9 @@
         <ToggleButton fx:id="linearToggleButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onLinearButtonAction" styleClass="color-toggle" text="Linear Gradient" toggleGroup="$modeswitch" HBox.hgrow="ALWAYS" />
         <ToggleButton fx:id="radialToggleButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onRadialButtonAction" styleClass="color-toggle" text="Radial Gradient" toggleGroup="$modeswitch" HBox.hgrow="ALWAYS" />
       </children>
+         <padding>
+            <Insets bottom="2.0" />
+         </padding>
     </HBox>
   </children>
 </VBox>
