--- a/FXExperienceControls/src/main/resources/fxml/FXMLGradientSlider.fxml
+++ b/FXExperienceControls/src/main/resources/fxml/FXMLGradientSlider.fxml
@@ -31,7 +31,7 @@
   (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
-<?import com.fxexperience.javafx.scene.control.paintpicker.DoubleTextField?>
+<?import com.fxexperience.javafx.control.textfields.DoubleTextField?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.ColumnConstraints?>
