--- a/FXExperienceControls/src/main/resources/fxml/FXMLGradientPickerStop.fxml
+++ b/FXExperienceControls/src/main/resources/fxml/FXMLGradientPickerStop.fxml
@@ -31,7 +31,7 @@
   (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
-<?import com.fxexperience.javafx.control.textfields.DoubleTextField?>
+<?import com.fxexperience.javafx.scene.control.textfields.DoubleTextField?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ContextMenu?>
