--- a/FXExperienceControls/src/main/resources/fxml/FXMLRotatorControl.fxml
+++ b/FXExperienceControls/src/main/resources/fxml/FXMLRotatorControl.fxml
@@ -32,7 +32,7 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
-<?import com.fxexperience.javafx.control.textfields.DoubleTextField?>
+<?import com.fxexperience.javafx.scene.control.textfields.DoubleTextField?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
